# xgossip

./: CMakeLists.txt  README.md  gossip_interface.h
include/: block_sync_manager.h  broadcast_layered.h  gossip_bloomfilter.h  gossip_bloomfilter_layer.h  gossip_filter.h  gossip_set_layer.h  gossip_utils.h  header_block_data.h  mesages_with_bloomfilter.h  random_layered_broadcast.h
src/: block_sync_manager.cc  broadcast_layered.cc  gossip_bloomfilter.cc  gossip_bloomfilter_layer.cc  gossip_filter.cc  gossip_interface.cc  gossip_set_layer.cc  gossip_utils.cc  header_block_data.cc  messages_with_bloomfilter.cc
tests/: CMakeLists.txt  test_broadcast_layered.cc  test_gossip_bloomfilter_layer.cc  test_gossip_interface.cc  test_ips.h  test_main.cc
xgossip.xcodeproj/: project.pbxproj
xgossip.xcodeproj/xcuserdata/imac.xcuserdatad/xcschemes/: xcschememanagement.plist
